fixing featured buttons margin and featured img aspect ratio on mobile

--- a/src/components/Featured/Featured.component.scss
+++ b/src/components/Featured/Featured.component.scss
@@ -36,13 +36,13 @@
 
 @media (max-width: 768px) {
   .featured-container {
-    aspect-ratio: 3/1.1;
+    aspect-ratio: 3/1.2;
   }
   .featured-tile {
     width: 90%;
   }
   .tile-logo img {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
   }
   .featured-buttons {
     max-width: 100%;
